--- a/package.yaml
+++ b/package.yaml
@@ -37,7 +37,7 @@ library:
   source-dirs: src
 
 executables:
-  tvmv-exe:
+  tvmv:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
