--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -35,7 +35,7 @@ library
       base >=4.7 && <5
   default-language: Haskell2010
 
-executable tvmv-exe
+executable tvmv
   main-is: Main.hs
   other-modules:
       Paths_tvmv
