--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,10 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- text
+
+default-extensions:
+- OverloadedStrings # so string literals and Data.Text play well together
 
 ghc-options:
 - -Wall
@@ -35,6 +39,8 @@ ghc-options:
 
 library:
   source-dirs: src
+  dependencies:
+  - themoviedb
 
 executables:
   tvmv:
