--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,8 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 # extra-deps: []
+extra-deps:
+  - themoviedb-1.2.2
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
