--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       API
+      Rename
       Show
   other-modules:
       Paths_tvmv
@@ -59,6 +60,7 @@ test-suite tvmv-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      RenameSpec
       Paths_tvmv
   hs-source-dirs:
       test
@@ -67,6 +69,7 @@ test-suite tvmv-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , hspec
     , text
     , tvmv
   default-language: Haskell2010
