First bits of file-listing code

--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       API
+      File
       Rename
       Show
   other-modules:
@@ -37,6 +38,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , directory
     , filepath
     , text
     , themoviedb
