--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                tvmv
 version:             0.1.0.0
-github:              "githubuser/tvmv"
+github:              "keithfancher/tvmv"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2022 Author name here"
+author:              "Keith Fancher"
+maintainer:          "nospam@example.com"
+copyright:           "2022 Keith Fancher"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/tvmv#readme>
+description:         Please see the README on GitHub at <https://github.com/keithfancher/tvmv#readme>
 
 dependencies:
 - base >= 4.7 && < 5
