--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -6,12 +6,12 @@ cabal-version: 1.12
 
 name:           tvmv
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/tvmv#readme>
-homepage:       https://github.com/githubuser/tvmv#readme
-bug-reports:    https://github.com/githubuser/tvmv/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2022 Author name here
+description:    Please see the README on GitHub at <https://github.com/keithfancher/tvmv#readme>
+homepage:       https://github.com/keithfancher/tvmv#readme
+bug-reports:    https://github.com/keithfancher/tvmv/issues
+author:         Keith Fancher
+maintainer:     nospam@example.com
+copyright:      2022 Keith Fancher
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/tvmv
+  location: https://github.com/keithfancher/tvmv
 
 library
   exposed-modules:
