--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -53,6 +53,7 @@ library
 executable tvmv
   main-is: Main.hs
   other-modules:
+      Args
       Paths_tvmv
   hs-source-dirs:
       app
@@ -61,6 +62,7 @@ executable tvmv
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , optparse-applicative
     , text
     , tvmv
   default-language: Haskell2010
