Add tests for API key loading fallback logic

--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -72,6 +72,7 @@ test-suite tvmv-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      ExecuteSpec
       FileSpec
       LogSpec
       RenameSpec
