--- a/package.yaml
+++ b/package.yaml
@@ -26,7 +26,8 @@ dependencies:
 - filepath
 
 default-extensions:
-- OverloadedStrings # so string literals and Data.Text play well together
+- OverloadedStrings
+- DuplicateRecordFields
 
 ghc-options:
 - -Wall
