First steps toward "mtl-style", redefine the `Tvmv` type

--- a/package.yaml
+++ b/package.yaml
@@ -28,6 +28,9 @@ dependencies:
 default-extensions:
 - OverloadedStrings
 - DuplicateRecordFields
+- FlexibleContexts # more useful type constraints
+- TypeSynonymInstances # make a type alias an instance of a type class
+- GeneralizedNewtypeDeriving # derive Monad, etc, basically, in my transformer newtype
 
 ghc-options:
 - -Wall
@@ -45,6 +48,7 @@ library:
   dependencies:
   - themoviedb
   - transformers
+  - mtl
   - time
 
 executables:
