--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -44,11 +44,15 @@ library
   default-extensions:
       OverloadedStrings
       DuplicateRecordFields
+      FlexibleContexts
+      TypeSynonymInstances
+      GeneralizedNewtypeDeriving
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
     , directory
     , filepath
+    , mtl
     , text
     , themoviedb
     , time
@@ -66,6 +70,9 @@ executable tvmv
   default-extensions:
       OverloadedStrings
       DuplicateRecordFields
+      FlexibleContexts
+      TypeSynonymInstances
+      GeneralizedNewtypeDeriving
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
@@ -91,6 +98,9 @@ test-suite tvmv-test
   default-extensions:
       OverloadedStrings
       DuplicateRecordFields
+      FlexibleContexts
+      TypeSynonymInstances
+      GeneralizedNewtypeDeriving
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
