--- a/package.yaml
+++ b/package.yaml
@@ -63,9 +63,9 @@ executables:
     - optparse-applicative
 
 tests:
-  tvmv-test:
+  unit:
     main:                Spec.hs
-    source-dirs:         test
+    source-dirs:         test/unit
     ghc-options:
     - -threaded
     - -rtsopts
@@ -74,3 +74,13 @@ tests:
     - tvmv
     - hspec
     - themoviedb
+  integration:
+    main:                Spec.hs
+    source-dirs:         test/integration
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - tvmv
+    - hspec
