--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -86,6 +86,7 @@ test-suite integration
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      API.Stub
       Paths_tvmv
   hs-source-dirs:
       test/integration
