--- a/package.yaml
+++ b/package.yaml
@@ -25,13 +25,12 @@ dependencies:
 - directory
 - filepath
 
+language: GHC2021 # the future!
+
 default-extensions:
-- OverloadedStrings
 - DuplicateRecordFields
-- FlexibleContexts # more useful type constraints
-- TypeSynonymInstances # make a type alias an instance of a type class
-- GeneralizedNewtypeDeriving # derive Monad, etc, basically, in my transformer newtype
 - LambdaCase
+- OverloadedStrings
 
 ghc-options:
 - -Wall
