--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.0.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -34,6 +34,7 @@ library
       Domain.Show
       Exec.Commands
       Exec.Env
+      Exec.Filter
       Exec.Rename
       Execute
       File
