--- a/stack.yaml
+++ b/stack.yaml
@@ -42,7 +42,14 @@ packages:
 #
 # extra-deps: []
 extra-deps:
-  - themoviedb-1.2.2
+- themoviedb-1.2.2
+# Latest version of hspec, newer than what's in Stackage. Specifically to fix
+# the annoying warning about missing export lists when using hspec-discover.
+- hspec-2.11.4
+- hspec-core-2.11.4
+- hspec-discover-2.11.4
+- hspec-expectations-0.8.4
+
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
