Move `Match` module out of `Exec`
It's all pure code, it doesn't really belong there.

--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -35,11 +35,11 @@ library
       Exec.Commands
       Exec.Env
       Exec.Filter
-      Exec.Match
       Exec.Rename
       Execute
       File
       Log
+      Match
       Monad.Tvmv
       Parse
       Print
