Add `ansi-terminal` library and some basic color printing functions

--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -61,7 +61,8 @@ library
       StrictData
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      ansi-terminal
+    , base >=4.7 && <5
     , containers
     , directory
     , filepath
