--- a/tvmv.cabal
+++ b/tvmv.cabal
@@ -12,7 +12,7 @@ bug-reports:    https://github.com/keithfancher/tvmv/issues
 author:         Keith Fancher
 maintainer:     nospam@example.com
 copyright:      2022 Keith Fancher
-license:        BSD3
+license:        GPL-3.0-or-later
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
